// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parts: Sticker renders correctly with all props 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: var(--weight-bold);
  color: var(--color-darker);
}

.c1 strong {
  font-size: var(--font-large-size);
  line-height: var(--font-large-lineHeight);
}

.c1 i {
  font-weight: var(--weight-light);
  color: var(--color-dark);
  font-style: normal;
  text-transform: uppercase;
  margin-right: 5px;
  font-size: var(--font-large-size);
  line-height: var(--font-large-lineHeight);
}

.c0 {
  --sticker-label-color: var(--color);
  display: block;
  text-align: left;
}

.c0 small {
  display: block;
  font-weight: var(--weight-regular);
  color: var(--sticker-label-color);
}

<div
  className="c0"
>
  <small>
    Amount
  </small>
  <div
    className="c1"
    size="large"
  >
    <i>
      usd
    </i>
    <strong>
      2300.00
    </strong>
  </div>
</div>
`;

exports[`Parts: Sticker renders correctly without any props 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: var(--weight-bold);
  color: var(--color-darker);
}

.c1 strong {
  font-size: var(--font-medium-size);
  line-height: var(--font-medium-lineHeight);
}

.c1 i {
  font-weight: var(--weight-light);
  color: var(--color-dark);
  font-style: normal;
  text-transform: uppercase;
  margin-right: 5px;
  font-size: var(--font-normal-size);
  line-height: var(--font-normal-lineHeight);
}

.c0 {
  --sticker-label-color: var(--color);
  display: block;
  text-align: center;
}

.c0 small {
  display: block;
  font-weight: var(--weight-regular);
  color: var(--sticker-label-color);
}

<div
  className="c0"
>
  <div
    className="c1"
    size="default"
  >
    
    <strong>
      
    </strong>
  </div>
  <small>
    
  </small>
</div>
`;
